# humanus.cpp

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  README.zh.md
agent/: base.h  chatbot.h  humanus.cpp  humanus.h  mcp.h  react.h  toolcall.cpp  toolcall.h
config/: README.md
config/example/: config.toml  config_embd.toml  config_llm.toml  config_mcp.toml  config_mem.toml  config_vec.toml
docs/: API.md  DEVELOPMENT.md
examples/: CMakeLists.txt
examples/chat/: CMakeLists.txt  humanus_chat.cpp
examples/main/: CMakeLists.txt  main.cpp
examples/plan/: CMakeLists.txt  humanus_plan.cpp
examples/server/: CMakeLists.txt  server.cpp
flow/: base.h  flow_factory.h  planning.cpp  planning.h
include/: config.h  llm.h  logger.h  prompt.h  schema.h  utils.h
memory/: base.h  utils.cpp  utils.h
memory/embedding_model/: base.cpp  base.h  oai.cpp  oai.h
memory/vector_store/: base.cpp  base.h  hnswlib.cpp  hnswlib.h
server/: CMakeLists.txt  README.md  mcp_tool_server.cpp  python_execute.cpp
src/: config.cpp  llm.cpp  logger.cpp  prompt.cpp  schema.cpp  utils.cpp
tests/: CMakeLists.txt  test_bpe.cpp
tokenizer/: CMakeLists.txt  base.h  bpe.h  utils.cpp  utils.h
tool/: base.h  content_provider.h  fact_extract.h  filesystem.h  image_loader.h  memory.h  planning.cpp  planning.h  playwright.h  puppeteer.h  python_execute.h  terminate.h  tool_collection.h
